<resources>
    <string name="app_name">City explorer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="list_fragment_label">My Places</string>
    <string name="edit_fragment_label">Add Place</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Hello first fragment!
    </string>
    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="my_places_list">My Places List</string>
    <string name="about">About</string>
    <string name="about_text">
        <i>City Explorer</i> je aplikacija koja ce vam pomoci da pronadjete najbolja turisticka mesta u gradu.
        Na mapi se nalaze ocene i slike najposecenijih mesta u gradu, bilo da su to restorani, kulturno istorijski spomenici, primeri arhitektura grada ili parkovi.
        Nadamo se da cete uspesno pronaci zeljene lokacije!
    </string>
    <string name="ok">OK</string>
    <string name="title_activity_my_places_list">MyPlacesList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editmyplace_desc_label">Description</string>
    <string name="editmyplace_name_label">Name</string>
    <string name="editmyplace_add_label">Add</string>
    <string name="editmyplace_cancel_label">Cancel</string>
    <string name="viewmyplace_finished_button">Close</string>
    <string name="editmyplace_save_label">Save</string>
    <string name="map_fragment_label">Map</string>
    <string name="editmyplace_longitude_label">Longitude</string>
    <string name="editmyplace_latitude_label">Latitude</string>
    <string name="editmyplace_button_set_coordinates">Set</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="editmyplace_comm_label">Comment</string>
    <string name="editmyplace_grade_label">Grade</string>
</resources>