<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="elfak.mosis.cityexplorer.MainActivity">
    <item
        android:id="@+id/action_show_map"
        android:orderInCategory="100"
        android:title="@string/show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_map_white_24"/>
    <item
        android:id="@+id/action_new_place"
        android:orderInCategory="100"
        android:title="@string/new_place"
        app:showAsAction="ifRoom"
        android:icon="@drawable/outline_add_white_24"/>

    <item
        android:id="@+id/action_my_places_list"
        android:orderInCategory="100"
        android:title="@string/my_places_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/outline_format_list_bulleted_white_24"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/outline_help_white_24"/>
</menu>