<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageViewR3"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:src="@drawable/elfak" />




        <TextView
            android:id="@+id/textViewR3"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:gravity="center"
            android:hint="@string/firstName"
            android:inputType="text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/lastName"
            android:inputType="text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="25sp" />



        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PictureReg"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Camera"
            android:layout_marginBottom="16dp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_register" />
        <TextView
            android:id="@+id/loginNow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/click_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>