<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="elfak.mosis.cityexplorer.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home"
        tools:ignore="ExtraText">

        <action
            android:id="@+id/action_HomeFragment_to_ListFragment"
            app:destination="@+id/ListFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_EditFragment"
            app:destination="@+id/EditFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_MapFragment"
            app:destination="@+id/MapFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@+id/LoginFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_EditUserFragment"
            app:destination="@+id/EditUserFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_InfoFragment"
            app:destination="@+id/InfoFragment" />


    </fragment>
    <fragment
        android:id="@+id/ListFragment"
        android:name="elfak.mosis.cityexplorer.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_ListFragment_to_EditFragment"
            app:destination="@+id/EditFragment"/>
        <action
            android:id="@+id/action_ListFragment_to_ViewFragment"
            app:destination="@+id/ViewFragment"/>
        <action
            android:id="@+id/action_ListFragment_to_MapFragment"
            app:destination="@+id/MapFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditFragment"
        android:name="elfak.mosis.cityexplorer.EditFragment"
        android:label="@string/edit_fragment_label"
        tools:layout="@layout/fragment_edit">
        <action
            android:id="@+id/action_EditFragment_to_MapFragment"
            app:destination="@+id/MapFragment" />
        <action
            android:id="@+id/action_EditFragment_to_HomeFragment"
            app:destination="@+id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/ViewFragment"
        android:name="elfak.mosis.cityexplorer.ViewFragment"
        android:label="View My Place"
        tools:layout="@layout/fragment_view">
        <action
            android:id="@+id/action_ViewFragment_to_ListFragment"
            app:destination="@+id/ListFragment"/>
    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="elfak.mosis.cityexplorer.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_MapFragment_to_EditFragment"
            app:destination="@+id/EditFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="elfak.mosis.cityexplorer.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_RegistrationFragment"
            app:destination="@+id/RegisterFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@+id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegistrationFragment"
        android:name="elfak.mosis.cityexplorer.RegistrationFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_RegistrationFragment_to_LoginFragment"
            app:destination="@+id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditUserFragment"
        android:name="elfak.mosis.cityexplorer.EditUserFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_edit_user">
        <action
            android:id="@+id/action_EditUserFragment_to_HomeFragment"
            app:destination="@+id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/InfoFragment"
        android:name="elfak.mosis.cityexplorer.InfoFragment"
        android:label="Info"
        tools:layout="@layout/fragment_view">
        <action
            android:id="@+id/action_ViewFragment_to_ListFragment"
            app:destination="@+id/ListFragment"/>
    </fragment>

</navigation>